--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "test": "apm test"
   },
-  "package-deps": ["linter"],
+  "package-deps": [
+    "linter"
+  ],
   "providedServices": {
     "linter": {
       "versions": {
@@ -32,6 +34,7 @@
   },
   "homepage": "https://github.com/steelbrain/flow-ide#readme",
   "dependencies": {
+    "atom-linter": "^4.4.0",
     "atom-package-deps": "^3.0.7"
   }
 }
