--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
       "versions": {
         "1.0.0": "provideLinter"
       }
+    },
+    "autocomplete.provider": {
+      "versions": {
+        "2.0.0": "provideAutocomplete"
+      }
     }
   },
   "repository": {
