--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "homepage": "https://github.com/steelbrain/flow-ide#readme",
   "dependencies": {
     "atom-linter": "^4.4.0",
-    "atom-package-deps": "^3.0.7"
+    "atom-package-deps": "^3.0.7",
+    "sb-string_score": "^0.1.20"
   }
 }
