--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/steelbrain/flow-ide#readme",
   "dependencies": {
+    "atom-autocomplete": "^1.0.0",
     "atom-linter": "^4.5.0",
     "atom-package-deps": "^4.0.0",
     "sb-string_score": "^0.1.20"
