--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "atom": ">=1.4.0 <2.0.0"
   },
   "providedServices": {
-    "linter": {
-      "versions": {
-        "2.0.0": "provideLinter"
-      }
-    },
     "autocomplete.provider": {
       "versions": {
         "2.0.0": "provideAutocomplete"
+      }
+    },
+    "hyperclick.provider": {
+      "versions": {
+        "0.0.0": "provideHyperclick"
+      }
+    },
+    "linter": {
+      "versions": {
+        "2.0.0": "provideLinter"
       }
     }
   },
@@ -56,8 +61,9 @@
     "sb-string_score": "^0.1.20"
   },
   "devDependencies": {
-    "flow-bin": "^0.44.0",
-    "eslint-config-steelbrain": "^3.0.1"
+    "eslint-config-steelbrain": "^3.0.1",
+    "eslint-plugin-flowtype": "^2.33.0",
+    "flow-bin": "^0.46.0"
   },
   "configSchema": {
     "onlyIfAppropriate": {
@@ -69,6 +75,11 @@
       "description": "Path to `flow` executable",
       "type": "string",
       "default": ""
+    },
+    "hyperclickPriority": {
+      "description": "Priority to use for hyperclick provider",
+      "type": "integer",
+      "default": "0"
     }
   }
 }
