--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     }
   },
   "consumedServices": {
+    "datatip": {
+      "versions": {
+        "0.1.0": "consumeDatatip"
+      }
+    },
     "status-bar": {
       "versions": {
         "^1.0.0": "consumeStatusBar"
@@ -59,12 +64,13 @@
     "atom-autocomplete": "^1.0.0",
     "atom-linter": "^10.0.0",
     "atom-package-deps": "^4.4.1",
+    "flow-language-server": "^0.2.3",
     "sb-string_score": "^0.1.20"
   },
   "devDependencies": {
     "eslint-config-steelbrain": "^3.0.1",
     "eslint-plugin-flowtype": "^2.33.0",
-    "flow-bin": "^0.52.0"
+    "flow-bin": "^0.57.3"
   },
   "configSchema": {
     "onlyIfAppropriate": {
