--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
       "versions": {
         "2.0.0": "provideLinter"
       }
+    },
+    "outline-view": {
+      "versions": {
+        "0.1.0": "provideOutlines"
+      }
     }
   },
   "consumedServices": {
