--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/steelbrain/flow-ide.git"
+    "url": "https://github.com/steelbrain/flow-ide.git"
   },
   "keywords": [
     "flow",
