Check which version can be used for the status linter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
     "no-duplicate-imports": "off",
     "flowtype/define-flow-type": "error",
     "flowtype/use-flow-type": "error"
+  },
+  "globals": {
+    "waitsForPromise": true
   }
 }
