Add missing packages babel

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
   ],
   "sourceMap": "inline",
   "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread",
     "transform-flow-strip-types"
   ]
 }
