--- a/package.json
+++ b/package.json
@@ -128,7 +128,9 @@
     "atom-babel6-transpiler": "^1.2.0",
     "atom-linter": "^10.0.0",
     "atom-package-deps": "^4.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "flow-language-server": "^0.2.3",
     "sb-string_score": "^0.1.20",
